@@ -13,6 +13,6 @@ public class StringUtils {
     }
 
     public static boolean isBlank(String s) {
-        return s == null || s.trim().isEmpty();
+        return s == null || s.isBlank();
     }
 }
